fix(esl-image-utils): remove extra overflow style

--- a/src/modules/esl-image-utils/core/esl-image-utils.container.less
+++ b/src/modules/esl-image-utils/core/esl-image-utils.container.less
@@ -1,7 +1,6 @@
 // Image Container Defaults
 .img-container {
   position: relative;
-  overflow: hidden;
 
   > img {
     width: 100%;
